Cleanup javac warnings (javac from Oracle JDK 8u151 and Oracle JDK 9.0.1)